git-svn-id: https://www.network-innovation.de/svn/enginator/trunk@25 b3a2f769-a7ff-4d38-93eb-04cb15c46fdf

--- a/enginator_full/enginator_full.vcproj
+++ b/enginator_full/enginator_full.vcproj
@@ -49,6 +49,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="..\libenginator\src\Application;..\libenginator\src\Engine;..\libenginator\src\Settings;..\libenginator\src\DSP;..\libenginator\src\Waveguide"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
